[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/logo.png" type="Texture" id=1]
[ext_resource path="res://scenes/game.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/mountain-king.ogg" type="AudioStream" id=3]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 120
custom_constants/margin_left = 80
custom_constants/margin_bottom = 120
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 120.0
margin_right = 944.0
margin_bottom = 480.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 272.0
margin_top = 35.0
margin_right = 592.0
margin_bottom = 325.0
custom_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer2"]
margin_right = 320.0
margin_bottom = 60.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer2"]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 290.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="MenuButton" parent="MarginContainer/CenterContainer/VBoxContainer2/VBoxContainer"]
margin_right = 320.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Start"
flat = false

[node name="Mute" type="MenuButton" parent="MarginContainer/CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 70.0
margin_right = 320.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 40 )
text = "Mute"
flat = false

[node name="Exit" type="MenuButton" parent="MarginContainer/CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 140.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 40 )
text = "Exit"
flat = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer2/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer2/VBoxContainer/Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer2/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
